@@ -1,5 +1,5 @@
 #if !defined(lint) && !defined(__INSIGHT__)
-static const char libbk__rcsid[] = "$Id: b_addrgroup.c,v 1.27 2002/07/18 22:52:43 dupuy Exp $";
+static const char libbk__rcsid[] = "$Id: b_addrgroup.c,v 1.28 2002/10/02 19:16:37 lindauer Exp $";
 static const char libbk__copyright[] = "Copyright (c) 2001";
 static const char libbk__contact[] = "<projectbaka@baka.org>";
 #endif /* not lint */
@@ -690,6 +690,7 @@ do_net_init_af_inet_udp_listen(bk_s B, struct addrgroup_state *as)
   BK_ENTRY(B, __FUNCTION__, __FILE__, "libbk");
   int s = -1;
   struct bk_addrgroup *bag;
+  static int one = 1;
   int af;
 
   if (!as)
@@ -711,6 +712,12 @@ do_net_init_af_inet_udp_listen(bk_s B, struct addrgroup_state *as)
   }
 
   as->as_sock = s;
+
+  if (setsockopt(s, SOL_SOCKET, SO_REUSEADDR, &one, sizeof(one)) < 0)
+  {
+    bk_error_printf(B, BK_ERR_WARN, "Could not set reuseaddr on socket\n");
+    // Fatal? Nah...
+  }
 
   if (as->as_callback)
   {
@@ -838,7 +845,7 @@ tcp_connect_start(bk_s B, struct addrgroup_state *as)
   }
 
   as->as_sock = s;
-  
+
   /* Force non-blocking. We will restore this later */
   if (bk_fileutils_modify_fd_flags(B, s, O_NONBLOCK, BkFileutilsModifyFdFlagsActionAdd) < 0)
   {
